--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
 								<article>
 									<header>
 								
-										<h2><a href="#">Areogram (IIT Delhi)<br />
+										<h2><a href="aerogram.html">Areogram (IIT Delhi)<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Aerogram.jpg" alt=""/></a>
-									<p>Working on MQTT protocols for migrating telemetry feed from low bandwidth IoT-Devices to Google IoT Core for further data collection and accumulation.
+									<a href="aerogram.html" target = "_blank" class="image fit"><img src="images/Aerogram.jpg" alt=""/></a>
+									<p>worked on MQTT protocols for migrating telemetry feed from low bandwidth IoT-Devices to Google IoT Core for further data collection and accumulation.
 										Developed Google Cloud Functions using Python as a programming language to migrate and also create a workflow to receive and send the telemetry feed from Google Cloud Pub/Sub to store data into Google Cloud SQL and Google Firestore.
-										Developing and working on Time Series Analysis for predicting and forecasting PM2.5 values.
-										Testing Seasonal Auto-Regressive Integrated Moving Average, Auto-Regressive Integrated Moving Average, Simple Moving Average, Exponential Moving Average, Weighted Moving Average, and many other models & algorithms and regression analysis for time series analysis.
+										Developed and working on Time Series Analysis for predicting and forecasting PM2.5 values.
+										Tested Seasonal Auto-Regressive Integrated Moving Average, Auto-Regressive Integrated Moving Average, Simple Moving Average, Exponential Moving Average, Weighted Moving Average, and many other models & algorithms and regression analysis for time series analysis.
 										Developed Python scripts for publishing and subscribing data and payload messages for testing and understanding the working of Google Pub/Sub and Google IoT core.
 										</p>
 										<strong><p> Technical Skills: Python, Flask, MQTT, GCP, Statistical Analysis, Tableau </p></strong>
@@ -202,10 +202,10 @@
 								<article>
 									<header>
 								
-										<h2><a href="#">Hitachi India<br />
+										<h2><a href="hitachi.html">Hitachi India<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Hitachi.png" alt=""/></a>
+									<a href="hitachi.html" target = "_blank" class="image fit"><img src="images/Hitachi.png" alt=""/></a>
 									<p> Developed a Project using Python in Web Scraping by utilizing Pandas, ScraPy, SciPy, NumPy and Python-based Automation and extracted unstructured Data from Web Pages and prepared a structured Dataset for doing Data processing. Extracted Data to assess the accuracy and consistency of the Arrival Time of Trains. Designed a script based solution in Python which automated the processes of Data extraction in real-time and simultaneously stored the Data in CSV formats.
 										Implemented Crawlers using ScraPy and extracted raw Data using CSS and XPath selectors.
 										Utilized the Regular expressions and Date and Time Packages and converted the unstructured Time and Date formats fetched from the webpage into Excel readable formats for Graphical analysis.
