--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 								<article>
 									<header>
 								
-										<h2><a href="aerogram.html">Areogram (IIT Delhi)<br />
+										<h2><a href="aerogram.html" target="_blank">Areogram (IIT Delhi)<br />
 										</a></h2>
 									</header>
 									<a href="aerogram.html" target = "_blank" class="image fit"><img src="images/Aerogram.jpg" alt=""/></a>
