--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 										<h2><a href="hitachi.html">Hitachi India<br />
 										</a></h2>
 									</header>
-									<a href="hitachi.html" target = "_blank" class="image fit"><img src="images/Hitachi.png" alt=""/></a>
+									<a href="hitachi.html" target = "_blank" class="image fit"><img src="images/Hitachi.jpg" alt=""/></a>
 									<p> Developed a Project using Python in Web Scraping by utilizing Pandas, ScraPy, SciPy, NumPy and Python-based Automation and extracted unstructured Data from Web Pages and prepared a structured Dataset for doing Data processing. Extracted Data to assess the accuracy and consistency of the Arrival Time of Trains. Designed a script based solution in Python which automated the processes of Data extraction in real-time and simultaneously stored the Data in CSV formats.
 										Implemented Crawlers using ScraPy and extracted raw Data using CSS and XPath selectors.
 										Utilized the Regular expressions and Date and Time Packages and converted the unstructured Time and Date formats fetched from the webpage into Excel readable formats for Graphical analysis.
