--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 					<div id="intro">
 						<img src="images/img_avatar.png" alt="Avatar" class="avatar">
 						<h1>Hi! I'm Aditya Kaushal <br /></h1>
-						<p>I'm currently a Data Engineer Trainee who’s  previously interned/worked at 
+						<blockquote>I'm currently a Data Engineer Trainee who’s  previously interned/worked at 
 						Hitachi as a Data Analyst Intern and Aerogram (IIT-Delhi Startup) as a Data Engineer Intern. 
 						My primary focus is on Data Engineering, Big Data Analytics and Cloud. Previously I finished up my B.Tech/B.E in Computer Science and Engineering  in Spring 2020, at Chandigarh University. 
-						My goals are to learn as much as possible from my experiences and interactions with others, and leave a positive impact on the world through my work. </p>
+						My goals are to learn as much as possible from my experiences and interactions with others, and leave a positive impact on the world. </blockquote>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -33,7 +33,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img src="images/avatar2.png" alt="Avatar" class="avatar2">
+						<!-- <img src="images/avatar2.png" alt="Avatar" class="avatar2"> -->
 					</header>
 
 				<!-- Nav -->
