--- a/aerogram.html
+++ b/aerogram.html
@@ -45,7 +45,7 @@
 										<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6666751208981704704" height="332" width="900" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 									</p>
 								</header>
-								<iframe src="pdfs/aerogram_rep.pdf" height="500" width="900" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+								<iframe src="pdfs/aerogram_rep.pdf#toolbar=0" height="500" width="900"></iframe>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 								<p>Aerogram is an IIT-Delhi based startup under TBIU that is devising a network to predict real-time air quality in a local mapped area.
 
