--- a/aerogram.html
+++ b/aerogram.html
@@ -28,6 +28,7 @@
 						<ul class="links">
 							<li class="active"><a href="#aerogram">Aerogram</a></li>
 							<li class="active"><a href="hitachi.html" target="_blank">Hitachi</a></li>
+							<li class="active"><a href="index.html">About</a></li>
 						</ul>
 						<ul class="icons">
 						</ul>
