--- a/hitachi.html
+++ b/hitachi.html
@@ -27,6 +27,8 @@
 						<ul class="links">
 							<li class="active"><a href="aerogram.html" target = "_blank">Aerogram</a></li>
 							<li class="active"><a href="#hitachi">Hitachi</a></li>
+							<li class="active"><a href="index.html">About</a></li>
+							
 						</ul>
 						<ul class="icons">
 						</ul>
