--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 								</article>
 							</section>
 
-							<section id = "blogs" class="posts">
+							<section id = "blogs" class="posts featured">
 								<article>
 									<header>
 								
