--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Aditya Kaushal</title>
@@ -43,7 +39,7 @@
 							<li class="active"><a href="#workexperience">Internships</a></li>
 							<li class="active"><a href="#projects">Sub Projects</a></li>
 							<li class="active"><a href="#blogs">Blogs</a></li>
-							<li class="active"><a href="https://drive.google.com/file/d/1uRlf48W3ncC3ohRrq0EXVOT0B-Y4vpWy/view?usp=sharing" target="_blank">Resume</a></li>
+							<li class="active"><a href="r" target="_blank">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/adityakaushal98/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
