--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>Particulate Matter 2.5 Predictor</h2>
+									<h2>AirSol</h2>
 									<p>Time Series Forecasting and regression analysis web app to predict and forecast PM 2.5 values and other Air pollution metrics 3 hours ahead. This project uses the Facebooks Prophet algorithm to forecast the PM 2.5 values 3 Hours ahead.</p>
 								</header>
 								<a href="https://github.com/adityakaushal/PM-2.5-Predictor" target="_blank" class="image main"><img src="images/time_series.png" alt="" /></a>
@@ -70,7 +70,7 @@
 							<section id = "projects" class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/adityakaushal/Face-Detection-and-Recognition-" target="_blank">Facial Recognition<br /></a></h2>
+										<h2><a href="https://github.com/adityakaushal/Face-Detection-and-Recognition-" target="_blank">Face2Gene<br /></a></h2>
 									</header>
 									<a href="https://github.com/adityakaushal/Face-Detection-and-Recognition-" target="_blank" class="image fit"><img src="images/face_rec.jpg" alt="" /></a>
 									<p>Facial Recognition or Facial Image Detection can be used to identify the individuals using their facial features.
