--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li class="active"><a href="#workexperience">Internships</a></li>
 							<li class="active"><a href="#projects">Sub Projects</a></li>
 							<li class="active"><a href="#blogs">Blogs</a></li>
-							<li class="active"><a href="resume.html" target="_blank">Resume</a></li>
+							<li class="active"><a href="pdfs/Aditya Kaushal Resume.pdf" type="pdf" target="_blank" >Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/adityakaushal98/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
