--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
 										<h2><a href="https://github.com/adityakaushal/Watsinos">Watsinos<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/adityakaushal/Watsinos" target="_blank" class="image fit"><img src="images/watsinos.png" alt="" /></a>
-									<p>Watsinos (A ChatBot for taking Pizza Orders from the end-user), an App that would be used to customise the pizza contents according to the users intent. The backend is the IBM Cloud, the Conversation API, Text-to-Speech API, Speech-to-Text API has been used in the Watsinos. Intents, Dialogs and entities have been used. The app is developed on Android Studio.</p>
-									<strong><p> Technical Skills: Android Studio, Java ,XML, IBM Cloud, Microservices</p></strong>
+									<a href="https://www.kaggle.com/adityakaushal98/range-of-incubation-periods-for-the-disease" target="_blank" class="image fit"><img src="images/dataset-cover.png" alt="" /></a>
+									<p>Processed 17+GB of Dataset
+										consisting of 200,000+ scholarly articles provided by AI2, Georgetown, NIH & The White House to mine text related to
+										incubation period of COVID-19. Utilised the Python script to parse JSON files to extract days and weeks of incubation and
+										plotted a histogram for visual representation. </p>
+									<strong><p> Technical Skills: Python (Data Analytics, visualisations and data mining)</p></strong>
 									<ul class="actions special">
 										
 									</ul>
@@ -112,7 +115,7 @@
 										<h2><a href="https://github.com/adityakaushal/Finding-Lanes" target="_blank" >Finding Lanes<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/adityakaushal/Finding-Lanes" target="_blank" class="image fit"><img src="images/find_lanes.png" alt="" /></a>
+									<a href="https://github.com/adityakaushal/Finding-Lanes" target="_blank" class="image fit"><img src="images/finding_lanes.png" alt="" /></a>
 									<p>Finding Lanes using OpenCV, for simulation of self-driving cars.</p>
 									<strong><p> Technical Skills: OpenCV, Python, Numpy, Canny Edge Detection</p></strong>
 									<ul class="actions special">
