--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								<article>
 									<header>
 
-										<h2><a href="https://www.kaggle.com/adityakaushal98/range-of-incubation-periods-for-the-disease">Range of incubation periods for the Covid-19 in Humans<br />
+										<h2><a href="https://www.kaggle.com/adityakaushal98/range-of-incubation-periods-for-the-disease" target="_blank">Range of incubation periods for Covid-19 in Humans<br />
 										</a></h2>
 									</header>
 									<a href="https://www.kaggle.com/adityakaushal98/range-of-incubation-periods-for-the-disease" target="_blank" class="image fit"><img src="images/dataset-cover.png" alt="" /></a>
