--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							<li class="active"><a href="#workexperience">Internships</a></li>
 							<li class="active"><a href="#projects">Sub Projects</a></li>
 							<li class="active"><a href="#blogs">Blogs</a></li>
+							<li class="active"><a href="podcast.html" target="_blank">Podcasts</a></li>
 							<li class="active"><a href="pdfs/Aditya Kaushal Resume.pdf" type="pdf" target="_blank" >Resume</a></li>
 						</ul>
 						<ul class="icons">
@@ -178,7 +179,7 @@
 								</article>
 
 							</section>
-
+							
 							<section id = "workexperience" class="posts">
 								<article>
 									<header>
