--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 							<li class="active"><a href="#projects">Sub Projects</a></li>
 							<li class="active"><a href="#blogs">Blogs</a></li>
 							<li class="active"><a href="podcast.html" target="_blank">Podcasts</a></li>
+							<li class="active"><a href="adityakaushal.netlify.app" target="_blank">Profile</a></li>
 							<li class="active"><a href="pdfs/Aditya Kaushal Resume.pdf" type="pdf" target="_blank" >Resume</a></li>
 						</ul>
 						<ul class="icons">
