--- a/podcast.html
+++ b/podcast.html
@@ -33,6 +33,20 @@
 
 				<!-- Main -->
 					<div id="main">
+						
+						<h3>Ep3: Data AI, Education and Building Tech</h3>
+						<p>In this episode we would discuss how data is leveraged and what are the industrial usage of Data. How Data is used and serves the community with great knowledge about certain areas of life.</p>
+						<iframe src="https://open.spotify.com/embed-podcast/episode/2b04zcfwFCV4ypnWAvzw5J" width="80%" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+						<ul>
+							<li>What is the future with AI & Data? </li>
+							<li>What are some of the exciting innovations in the data and AI space? </li>
+							<li>How Data and AI really impact and benefit covid-19 in response?</li>
+							<li>What are the type of non-tech skills which AI can't touch should humans be devloping in the next decade? (in short What is AI Bubble?)</li>
+							<li>What are your thoughts on what are the effective ways to build the problem solving framework to be Data Scientist/ML Engineer/Data Engineer? And how can you apply that problem solving  framework to actually build useful technology solutions?</li>
+							<li>How Data is leveraged for analytics and what are some very useful use-cases/case-studies that are being carried out in the research or application industry?</li>
+							<li>How privacy is also an issue when dealing with the data that is collected from around the world to solve a problem? How to make sure that the privacy is kept intact?</li>
+						</ul>	
+
 						<h3>Ep2: In a Source with Open Source Software</h3>
 						<p>In this episode we would discuss upon Open Source Software</p>
 						<iframe src="https://open.spotify.com/embed-podcast/episode/0BV7P6fQmwKFpmiaXiwera" width="80%" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
